proyek-akhir/kubernetes/shipping-app.yaml
# shipping app service
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  labels:
    app: shippingpage
spec:
  selector:
    app: shippingpage
  ports:
  - port: 3001
    name: http
---

# shipping app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingpage-dev
  labels:
    app: shippingpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shippingpage
  template:
    metadata:
      labels:
        app: shippingpage
    spec:
      containers:
      - name: shippingpage
        image: ghcr.io/userjalil/shipping-app:latest
        ports:
        - containerPort: 3001
